Security: Replace SQLite ProcessRunner/OSInfo with safe stubs
- Added safe stubs for ProcessRunner and OSInfo classes that eliminate Runtime.exec calls
- OS/arch detection now relies only on JVM system properties (no system commands)
- Updated shade plugin config to exclude original unsafe SQLite utility classes
- Rebuilt plugin jar: confirmed no Runtime.exec/PowerShell/ProcessBuilder strings remain

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,16 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <filters>
+                                <filter>
+                                    <artifact>org.xerial:sqlite-jdbc</artifact>
+                                    <excludes>
+                                        <exclude>org/sqlite/util/ProcessRunner.class</exclude>
+                                        <exclude>org/sqlite/util/OSInfo.class</exclude>
+                                        <exclude>org/sqlite/util/OSInfo$*.class</exclude>
+                                    </excludes>
+                                </filter>
+                            </filters>
                             <relocations>
                                 <relocation>
                                     <pattern>org.sqlite</pattern>
@@ -122,4 +132,3 @@
         </plugins>
     </build>
 </project>
-
