--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.yourorg</groupId>
     <artifactId>coinflipxd</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.1</version>
     <packaging>jar</packaging>
 
     <name>CoinflipXD</name>
